--- a/archives/toutiao-search/2024-03-02.md
+++ b/archives/toutiao-search/2024-03-02.md
@@ -1,66 +1,83 @@
 # 2024-03-02
 
-共 236 条
+共 252 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Mar 02 2024 16:00:55 GMT+0800 (China Standard Time) -->
-1. [娃哈哈客服称并非只有纸箱包装](https://so.toutiao.com/search?keyword=娃哈哈客服称并非只有纸箱包装)
-1. [汽车降价浪潮来袭](https://so.toutiao.com/search?keyword=汽车降价浪潮来袭)
+<!-- 最后更新时间 Sat Mar 02 2024 17:00:46 GMT+0800 (China Standard Time) -->
+1. [村支书坐拥60亩地盖别墅 已被批捕](https://so.toutiao.com/search?keyword=村支书坐拥60亩地盖别墅+已被批捕)
+1. [胖东来回应饮品区未找到娃哈哈产品](https://so.toutiao.com/search?keyword=胖东来回应饮品区未找到娃哈哈产品)
 1. [2024 中国向上](https://so.toutiao.com/search?keyword=2024+中国向上)
 1. [蔡英文办公室卫兵自戕现场画面](https://so.toutiao.com/search?keyword=蔡英文办公室卫兵自戕现场画面)
-1. [胖东来回应饮品区未找到娃哈哈产品](https://so.toutiao.com/search?keyword=胖东来回应饮品区未找到娃哈哈产品)
-1. [《周处除三害》票房破5000万](https://so.toutiao.com/search?keyword=《周处除三害》票房破5000万)
+1. [汽车降价浪潮来袭](https://so.toutiao.com/search?keyword=汽车降价浪潮来袭)
+1. [美商务部长发表涉华惊人言论遭嘲讽](https://so.toutiao.com/search?keyword=美商务部长发表涉华惊人言论遭嘲讽)
 1. [彩票店回应女生花4元中500万](https://so.toutiao.com/search?keyword=彩票店回应女生花4元中500万)
-1. [10名加沙儿童在医院被登记为饿死](https://so.toutiao.com/search?keyword=10名加沙儿童在医院被登记为饿死)
-1. [快递好几天没送 站点堆积如山](https://so.toutiao.com/search?keyword=快递好几天没送+站点堆积如山)
+1. [倒春寒真的要来了](https://so.toutiao.com/search?keyword=倒春寒真的要来了)
 1. [大V：金门事件再不给交待将有剧变](https://so.toutiao.com/search?keyword=大V：金门事件再不给交待将有剧变)
+1. [快递好几天没送 站点堆积如山](https://so.toutiao.com/search?keyword=快递好几天没送+站点堆积如山)
 1. [快递新规的真正目的是什么](https://so.toutiao.com/search?keyword=快递新规的真正目的是什么)
 1. [小S回应公公去世](https://so.toutiao.com/search?keyword=小S回应公公去世)
 1. [青海洪水致多死？官方：无人员伤亡](https://so.toutiao.com/search?keyword=青海洪水致多死？官方：无人员伤亡)
-1. [姚安娜发文回应演技争议](https://so.toutiao.com/search?keyword=姚安娜发文回应演技争议)
 1. [《猎冰》大结局张颂文哭了](https://so.toutiao.com/search?keyword=《猎冰》大结局张颂文哭了)
+1. [姚安娜发文回应演技争议](https://so.toutiao.com/search?keyword=姚安娜发文回应演技争议)
+1. [千惠回应与大25岁丈夫年龄差](https://so.toutiao.com/search?keyword=千惠回应与大25岁丈夫年龄差)
+1. [杨幂巴黎时装周总裁出街](https://so.toutiao.com/search?keyword=杨幂巴黎时装周总裁出街)
+1. [特斯拉3个月降价3次](https://so.toutiao.com/search?keyword=特斯拉3个月降价3次)
+1. [女子拒绝离职公司摆钟馗威胁](https://so.toutiao.com/search?keyword=女子拒绝离职公司摆钟馗威胁)
+1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
+1. [家长称自家孩子不上早课睡到自然醒](https://so.toutiao.com/search?keyword=家长称自家孩子不上早课睡到自然醒)
+1. [《周处除三害》票房破5000万](https://so.toutiao.com/search?keyword=《周处除三害》票房破5000万)
+1. [无糖油无面粉蛋糕](https://so.toutiao.com/search?keyword=无糖油无面粉蛋糕)
+1. [开封顶流乞丐为演好角色曾饿进医院](https://so.toutiao.com/search?keyword=开封顶流乞丐为演好角色曾饿进医院)
+1. [女子自制糖葫芦在英国街头分享](https://so.toutiao.com/search?keyword=女子自制糖葫芦在英国街头分享)
+1. [农村老人补缴4万养老金次月领多少](https://so.toutiao.com/search?keyword=农村老人补缴4万养老金次月领多少)
+1. [委员建议把灵活就业大学生纳入社保](https://so.toutiao.com/search?keyword=委员建议把灵活就业大学生纳入社保)
+1. [女子拿垫子摔倒网友都在找电动车](https://so.toutiao.com/search?keyword=女子拿垫子摔倒网友都在找电动车)
+1. [全红婵世界杯热身训练针式入水](https://so.toutiao.com/search?keyword=全红婵世界杯热身训练针式入水)
+1. [东航第五架C919大飞机交付入列](https://so.toutiao.com/search?keyword=东航第五架C919大飞机交付入列)
+1. [理想L7/8/9上市 31.98万起](https://so.toutiao.com/search?keyword=理想L7/8/9上市+31.98万起)
+1. [新政第一天还是没等到快递上门](https://so.toutiao.com/search?keyword=新政第一天还是没等到快递上门)
+1. [民众拍到大陆海警船与台海巡艇同框](https://so.toutiao.com/search?keyword=民众拍到大陆海警船与台海巡艇同框)
+1. [魅族21 Pro手机首销：4999元起](https://so.toutiao.com/search?keyword=魅族21+Pro手机首销：4999元起)
+1. [男子地铁阻止大妈插队被扇耳光](https://so.toutiao.com/search?keyword=男子地铁阻止大妈插队被扇耳光)
+1. [延迟退休对不同年代人影响多大](https://so.toutiao.com/search?keyword=延迟退休对不同年代人影响多大)
+1. [娃哈哈客服称并非只有纸箱包装](https://so.toutiao.com/search?keyword=娃哈哈客服称并非只有纸箱包装)
+1. [剪次头陪理发店演1小时戏](https://so.toutiao.com/search?keyword=剪次头陪理发店演1小时戏)
+1. [恒大地产发布涉及到期债务等公告](https://so.toutiao.com/search?keyword=恒大地产发布涉及到期债务等公告)
+1. [男子买无座票站商务舱还怼列车员](https://so.toutiao.com/search?keyword=男子买无座票站商务舱还怼列车员)
+1. [网购999足金戒指到手纯度仅为14k](https://so.toutiao.com/search?keyword=网购999足金戒指到手纯度仅为14k)
+1. [第一代农民工退休难：从未缴过社保](https://so.toutiao.com/search?keyword=第一代农民工退休难：从未缴过社保)
+1. [北京对特定违法行为人发送提示信息](https://so.toutiao.com/search?keyword=北京对特定违法行为人发送提示信息)
+1. [多名德国军人证实被窃听录音真实性](https://so.toutiao.com/search?keyword=多名德国军人证实被窃听录音真实性)
+1. [长安汽车回应车辆刚出4S店自燃](https://so.toutiao.com/search?keyword=长安汽车回应车辆刚出4S店自燃)
+1. [董明珠：实体经济是最重要经济基础](https://so.toutiao.com/search?keyword=董明珠：实体经济是最重要经济基础)
+1. [专家：决定国家增长质量的不是消费](https://so.toutiao.com/search?keyword=专家：决定国家增长质量的不是消费)
+1. [台卫兵自杀地点与12年前一样](https://so.toutiao.com/search?keyword=台卫兵自杀地点与12年前一样)
+1. [昆明一公司66666元悬赏的猫找到了](https://so.toutiao.com/search?keyword=昆明一公司66666元悬赏的猫找到了)
+1. [美国限制关键技术流入中国能否成功](https://so.toutiao.com/search?keyword=美国限制关键技术流入中国能否成功)
+1. [10名加沙儿童在医院被登记为饿死](https://so.toutiao.com/search?keyword=10名加沙儿童在医院被登记为饿死)
 1. [当地回应村书记7亩宅基地](https://so.toutiao.com/search?keyword=当地回应村书记7亩宅基地)
 1. [卫兵被传是他杀 台当局紧急回应](https://so.toutiao.com/search?keyword=卫兵被传是他杀+台当局紧急回应)
 1. [特斯拉美国Model Y涨价1000美元](https://so.toutiao.com/search?keyword=特斯拉美国Model+Y涨价1000美元)
 1. [媒体：村书记7亩宅基地要有说法](https://so.toutiao.com/search?keyword=媒体：村书记7亩宅基地要有说法)
-1. [网友称公司饮用水全部采购娃哈哈](https://so.toutiao.com/search?keyword=网友称公司饮用水全部采购娃哈哈)
-1. [家长称自家孩子不上早课睡到自然醒](https://so.toutiao.com/search?keyword=家长称自家孩子不上早课睡到自然醒)
-1. [全红婵世界杯热身训练针式入水](https://so.toutiao.com/search?keyword=全红婵世界杯热身训练针式入水)
-1. [千惠回应与大25岁丈夫年龄差](https://so.toutiao.com/search?keyword=千惠回应与大25岁丈夫年龄差)
 1. [比亚迪12天8款主力车降价](https://so.toutiao.com/search?keyword=比亚迪12天8款主力车降价)
 1. [新能源车周报：苹果放弃造车计划](https://so.toutiao.com/search?keyword=新能源车周报：苹果放弃造车计划)
-1. [农村老人补缴4万养老金次月领多少](https://so.toutiao.com/search?keyword=农村老人补缴4万养老金次月领多少)
-1. [女子拿垫子摔倒网友都在找电动车](https://so.toutiao.com/search?keyword=女子拿垫子摔倒网友都在找电动车)
-1. [女子拒绝离职公司摆钟馗威胁](https://so.toutiao.com/search?keyword=女子拒绝离职公司摆钟馗威胁)
-1. [民众拍到大陆海警船与台海巡艇同框](https://so.toutiao.com/search?keyword=民众拍到大陆海警船与台海巡艇同框)
 1. [点读机女孩高君雨顺利完成手术](https://so.toutiao.com/search?keyword=点读机女孩高君雨顺利完成手术)
-1. [理想L7/8/9上市 31.98万起](https://so.toutiao.com/search?keyword=理想L7/8/9上市+31.98万起)
-1. [新政第一天还是没等到快递上门](https://so.toutiao.com/search?keyword=新政第一天还是没等到快递上门)
-1. [倒春寒真的要来了](https://so.toutiao.com/search?keyword=倒春寒真的要来了)
-1. [剪次头陪理发店演1小时戏](https://so.toutiao.com/search?keyword=剪次头陪理发店演1小时戏)
 1. [普京大谈核武为何却是“意不在核”](https://so.toutiao.com/search?keyword=普京大谈核武为何却是“意不在核”)
-1. [延迟退休对不同年代人影响多大](https://so.toutiao.com/search?keyword=延迟退休对不同年代人影响多大)
 1. [曹德旺创造了中国第一家人才中心](https://so.toutiao.com/search?keyword=曹德旺创造了中国第一家人才中心)
 1. [马克西33+6+5 76人送黄蜂3连败](https://so.toutiao.com/search?keyword=马克西33+6+5+76人送黄蜂3连败)
-1. [无糖油无面粉蛋糕](https://so.toutiao.com/search?keyword=无糖油无面粉蛋糕)
 1. [马斯克：未来变压器和电力将短缺](https://so.toutiao.com/search?keyword=马斯克：未来变压器和电力将短缺)
 1. [惠州153平的房60万挂牌25万成交](https://so.toutiao.com/search?keyword=惠州153平的房60万挂牌25万成交)
-1. [杨幂巴黎时装周总裁出街](https://so.toutiao.com/search?keyword=杨幂巴黎时装周总裁出街)
-1. [特斯拉3个月降价3次](https://so.toutiao.com/search?keyword=特斯拉3个月降价3次)
 1. [政协委员：为高质量发展建言献策](https://so.toutiao.com/search?keyword=政协委员：为高质量发展建言献策)
 1. [我国成功破解这一世界性难题](https://so.toutiao.com/search?keyword=我国成功破解这一世界性难题)
 1. [“借调”为何让基层意见大](https://so.toutiao.com/search?keyword=“借调”为何让基层意见大)
-1. [男子买无座票站商务舱还怼列车员](https://so.toutiao.com/search?keyword=男子买无座票站商务舱还怼列车员)
 1. [蔡英文办公室一卫兵举枪自戕身亡](https://so.toutiao.com/search?keyword=蔡英文办公室一卫兵举枪自戕身亡)
 1. [库里无罚球砍25分6板6助再创纪录](https://so.toutiao.com/search?keyword=库里无罚球砍25分6板6助再创纪录)
 1. [拜登宣布首次向加沙空投援助被嘲](https://so.toutiao.com/search?keyword=拜登宣布首次向加沙空投援助被嘲)
 1. [“两会”究竟是指哪两会](https://so.toutiao.com/search?keyword=“两会”究竟是指哪两会)
 1. [蔡英文办公室卫兵自戕现场画面曝光](https://so.toutiao.com/search?keyword=蔡英文办公室卫兵自戕现场画面曝光)
 1. [女子买牛肉发现是牛油上贴瘦肉](https://so.toutiao.com/search?keyword=女子买牛肉发现是牛油上贴瘦肉)
-1. [台卫兵自杀地点与12年前一样](https://so.toutiao.com/search?keyword=台卫兵自杀地点与12年前一样)
 1. [台湾青年：做“台独”遭天打雷劈](https://so.toutiao.com/search?keyword=台湾青年：做“台独”遭天打雷劈)
 1. [42岁郭晶晶活动状态](https://so.toutiao.com/search?keyword=42岁郭晶晶活动状态)
-1. [长安汽车回应车辆刚出4S店自燃](https://so.toutiao.com/search?keyword=长安汽车回应车辆刚出4S店自燃)
 1. [AI“复活”已成产业链](https://so.toutiao.com/search?keyword=AI“复活”已成产业链)
 1. [朱珠女儿近照曝光](https://so.toutiao.com/search?keyword=朱珠女儿近照曝光)
 1. [国乒釜山奖金分配引争议](https://so.toutiao.com/search?keyword=国乒釜山奖金分配引争议)
@@ -93,7 +110,6 @@
 1. [两会一年间我国这样书写发展答卷](https://so.toutiao.com/search?keyword=两会一年间我国这样书写发展答卷)
 1. [台媒拍到大陆舰艇在金门海域活动](https://so.toutiao.com/search?keyword=台媒拍到大陆舰艇在金门海域活动)
 1. [辽宁丹东一高层住宅发生火灾](https://so.toutiao.com/search?keyword=辽宁丹东一高层住宅发生火灾)
-1. [董明珠：实体经济是最重要经济基础](https://so.toutiao.com/search?keyword=董明珠：实体经济是最重要经济基础)
 1. [南方多地气温将大幅回升](https://so.toutiao.com/search?keyword=南方多地气温将大幅回升)
 1. [塞拉利昂总统比奥抵达武汉](https://so.toutiao.com/search?keyword=塞拉利昂总统比奥抵达武汉)
 1. [管碧玲不接受“金门撞船”名称遭批](https://so.toutiao.com/search?keyword=管碧玲不接受“金门撞船”名称遭批)
