--- a/archives/zhihu-search/2024-03-02.md
+++ b/archives/zhihu-search/2024-03-02.md
@@ -1,18 +1,19 @@
 # 2024-03-02
 
-共 11 条
+共 12 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Sat Mar 02 2024 16:00:55 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Mar 02 2024 17:00:46 GMT+0800 (China Standard Time) -->
 1. [四六级成绩](https://www.zhihu.com/search?q=四六级成绩)
 1. [英语四六级](https://www.zhihu.com/search?q=英语四六级)
 1. [英语六级](https://www.zhihu.com/search?q=英语六级)
 1. [英语四级](https://www.zhihu.com/search?q=英语四级)
 1. [吴谢宇](https://www.zhihu.com/search?q=吴谢宇)
 1. [第一眼就感到震撼的图片](https://www.zhihu.com/search?q=第一眼就感到震撼的图片)
-1. [虾为啥要长得这么适合被吃](https://www.zhihu.com/search?q=虾为啥要长得这么适合被吃)
 1. [烟火人家](https://www.zhihu.com/search?q=烟火人家)
 1. [因为不想回国被妈妈拉黑了](https://www.zhihu.com/search?q=因为不想回国被妈妈拉黑了)
 1. [大陆电影译名最烂的是哪一部](https://www.zhihu.com/search?q=大陆电影译名最烂的是哪一部)
+1. [中国男篮88年首败日本](https://www.zhihu.com/search?q=中国男篮88年首败日本)
+1. [虾为啥要长得这么适合被吃](https://www.zhihu.com/search?q=虾为啥要长得这么适合被吃)
 1. [为什么很多人对「女司机」有看法](https://www.zhihu.com/search?q=为什么很多人对「女司机」有看法)
 <!-- END ZHIHUSEARCH -->
